fixed page fade font size jump

--- a/src/css/modules/_page.css
+++ b/src/css/modules/_page.css
@@ -1,5 +1,8 @@
 .page {
 	/*!critical*/
     opacity: 0;
+}
+
+.page {
     animation: fade-in cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
 }
